fix spacing issue on ul/ol on floated image block on Flexible page template

--- a/src/assets/scss/blocks/_floated-image.scss
+++ b/src/assets/scss/blocks/_floated-image.scss
@@ -43,4 +43,18 @@
 		line-height: 1.2;
 		text-align: center;
 	}
+
+	ul, ol {
+		display: table;
+		margin-left: 0;
+		padding-left: 1.25rem;
+
+		li {
+			line-height: 1.2;
+
+			&:not(:first-child) {
+				margin-top: .4em;
+			}
+		}
+	}
 }
